@@ -9,6 +9,12 @@ bool check1(const double mean,
   if (sd <= 0) {
     flag = false ;
   }
+  if (mean == R_NegInf) {
+    flag = false ;    
+  }
+  if (mean == R_PosInf) {
+    flag = false ;
+  }
   if (low >= high) {
     flag = false ;
   }
