@@ -3,6 +3,7 @@
 	* DESCRIPTION: version 0.1-3
 	* R/rtn.R: R warning on NA return values. Negligible effect on
 	performance.
+	* R/check1.cpp: Check for finite mean.
 
 2013-11-27  Jonathan Olmsted <jpolmsted@gmail.com>
 
